--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^3.3.4",
     "vuetify": "^3.3.23"
