--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -8,10 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^3.3.4",
-    "vuetify": "^3.3.23"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
