--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "material-design-icons-iconfont": "^6.7.0",
+    "sass": "^1.69.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
