--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "material-design-icons-iconfont": "^6.7.0",
     "sass": "^1.69.5",
