--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -13,7 +13,8 @@
     "material-design-icons-iconfont": "^6.7.0",
     "sass": "^1.69.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
