--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
     "sass": "^1.69.5",
     "vue": "^3.3.4",
